# flask-es-app

./: Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
app/: app.py  config.py  load_index.py  search_service.py
app/templates/: index.html
