[tool.poetry]
name = "flask-es-app"
version = "0.1.0"
description = ""
authors = ["nicolastomeo <ntomeo@anaconda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
elasticsearch = "^8.10.1"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
